--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -145,14 +145,50 @@ table .sub-table {
 .logs-history {
   max-height: 500px;
   overflow-y: scroll; }
+  .logs-history .alert-danger {
+    color: #a94442;
+    background-color: #f2dede;
+    box-shadow: none;
+    border: 1px solid transparent;
+    border-radius: 4px; }
   .logs-history .log-message {
-    margin-bottom: .3rem; }
+    margin-bottom: .3rem;
+    /* Icon when the collapsible content is hidden */ }
+    .logs-history .log-message .icon::after {
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      text-rendering: auto;
+      -webkit-font-smoothing: antialiased; }
+    .logs-history .log-message .btn {
+      margin-top: 0.8rem;
+      display: block; }
+    .logs-history .log-message .btn:after {
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+      content: "\f063";
+      float: right;
+      margin-left: 15px; }
+    .logs-history .log-message .btn.collapsed:after {
+      content: "\f061"; }
+    .logs-history .log-message i {
+      margin-right: 0.7rem; }
     .logs-history .log-message hr {
       margin-top: 8px;
       margin-bottom: 8px; }
+    .logs-history .log-message .property-message {
+      font-size: 1.3rem;
+      margin-left: 3rem; }
   .logs-history .time {
     font-size: 1.2rem;
     text-align: right;
-    margin-bottom: 20px; }
+    margin-bottom: 17px;
+    margin-top: 8px; }
+    .logs-history .time span {
+      background: #dfdfdf;
+      padding: 0.5rem 1.7rem;
+      border-radius: 3rem;
+      color: #515151;
+      font-weight: 500; }
 
 /*# sourceMappingURL=custom.css.map */
