--- a/webroot/css/custom.scss
+++ b/webroot/css/custom.scss
@@ -172,16 +172,60 @@ table {
 .logs-history {
   max-height: 500px;
   overflow-y: scroll;
+  .alert-danger {
+    color: #a94442;
+    background-color: #f2dede;
+    box-shadow: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+  }
   .log-message {
     margin-bottom: .3rem;
+    .icon::after {
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      text-rendering: auto;
+      -webkit-font-smoothing: antialiased;
+    }
+    .btn {
+      margin-top: 0.8rem;
+      display: block;
+    }
+    .btn:after {
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+      content: "\f063";
+      float: right;
+      margin-left: 15px;
+    }
+    /* Icon when the collapsible content is hidden */
+    .btn.collapsed:after {
+      content: "\f061";
+    }
+    i {
+        margin-right: 0.7rem;
+    }
     hr {
       margin-top: 8px;
       margin-bottom: 8px;
+    }
+    .property-message {
+        font-size: 1.3rem;
+        margin-left: 3rem;
     }
   }
   .time {
     font-size: 1.2rem;
     text-align: right;
-    margin-bottom: 20px;
+    margin-bottom: 17px;
+    margin-top: 8px;
+    span {
+      background: #dfdfdf;
+      padding: 0.5rem 1.7rem;
+      border-radius: 3rem;
+      color: #515151;
+      font-weight: 500;
+    }
   }
 }
